fix left alignment of sent text relative to heading

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -482,7 +482,7 @@ input[type=submit].button-blue,
 
 .ext-form-content p {
     color: #555;
-    padding: 0 0.25em;
+    padding: 0 0.5em;
     text-shadow: none;
     margin: 2em 0;
     text-align: left;
